unify service and resource metrics